Moving all security components to the gateway service